--- a/12.31/todo/布局/index.html
+++ b/12.31/todo/布局/index.html
@@ -183,6 +183,77 @@
         }
             
     })
+
+
+
+
+    
+// public class IODemo {
+// 	public static void main(String[] args) {
+// 		int data[] = { 100, 101, 102, 103, 104, 105 };
+// 		try {
+// 			DataOutputStream out = new DataOutputStream(new FileOutputStream("dest.text"));
+// 			for (int i = 0; i < data.length; i++)
+// 				out.writeInt(data[i]);
+// 			out.close();
+// 			DataInputStream in = new DataInputStream(new FileInputStream("dest.text"));
+// 			for (int i = data.length - 1; i >= 0; i--) {
+// 				data[i] = in.readInt();
+ 
+// 			}
+// 			for (int i = 0; i < data.length; i++) {
+// 				System.out.print(" " + data[i]);
+// 			}
+ 
+// 			System.out.println();
+// 			in.close();
+ 
+// 		} catch (FileNotFoundException e) {
+// 			// TODO Auto-generated catch block
+// 			e.printStackTrace();
+// 		} catch (IOException e) {
+// 			// TODO Au to-generated catch block
+// 			System.out.println(e.getMessage());
+// 		}
+ 
+//     }
+// }
 </script>
 </body>
 </html>
+
+
+
+
+
+public class IODemo {
+	public static void main(String[] args) {
+		int data[] = { 100, 101, 102, 103, 104, 105 };
+		try {
+			DataOutputStream out = new DataOutputStream(new FileOutputStream("dest.text"));
+			for (int i = 0; i < data.length; i++)
+				out.writeInt(data[i]);
+			out.close();
+			DataInputStream in = new DataInputStream(new FileInputStream("dest.text"));
+			for (int i = data.length - 1; i >= 0; i--) {
+				data[i] = in.readInt();
+ 
+			}
+			for (int i = 0; i < data.length; i++) {
+				System.out.print(" " + data[i]);
+			}
+ 
+			System.out.println();
+			in.close();
+ 
+		} catch (FileNotFoundException e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		} catch (IOException e) {
+			// TODO Auto-generated catch block
+			System.out.println(e.getMessage());
+		}
+ 
+    }
+}
+
