--- a/1.4/别的数据传递.html
+++ b/1.4/别的数据传递.html
@@ -24,7 +24,7 @@
         components:{
             ppa
         },
-        data:{
+        data:{ 
             num:0
         },
         proviede:{
@@ -32,6 +32,6 @@
         }
     })
 
-</script>
+</script>x
 </body>
 </html>
